<resources>
    <string name="app_name">Cookman</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_message">Click here to login</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="recipe">My Recipes</string>
    <string name="shopping">Shopping List</string>
    <string name="time">Time</string>
    <string name="addrecipe">Implement</string>
    <string name="follow">Following</string>
    <string name="nonfollow">Follow</string>
    <string name="followed">Added onto following list</string>
    <string name="unfollowed">Unfollow Sucessfully!</string>
    <string name="confirmunfollow">Are you sure you wanna unfollow this kitchen?</string>
    <string name="unfollow">Unfollow</string>
    <string name="dvtime">Minutes</string>
    <string name="addontoschedule">Added onto meal list</string>
    <string name="removerecipe">Removed Sucessfully!</string>
    <string name="confirmremoverecipe">Are you sure you wanna remove this recipe?</string>
    <string name="fillnameevent">Please fill name event!</string>
    <string name="notification">Notification from Cookman</string>
    <string name="setplanner">Set plan</string>
    <string name="dvration">People</string>
    <string name="upload">Upload Recipe</string>
    <string name="confirmupload">Are you sure you wanna publish?</string>
    <string name="uploadsucess">Upload Successful!</string>
    <string name="another">"Neighbuor's kitchen"</string>
    <string name="titilerecipe">Recipe</string>
    <string name="textnameevent">Event name</string>
    <string name="setdate">Set Date/Time</string>
    <string name="addtoplanner">Add onto meal planner</string>
    <string name="nameevent">Example: Dinner party</string>
    <string name="addedshopping">Added onto Shopping List</string>
    <string name="confirmshopping">Are you sure you wanna delete this shopping list?</string>
    <string name="confirmevent">Are you sure you wanna delete this event?</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="step1">Step: 1</string>
    <string name="step">Step: </string>
    <string name="addStep">Next Step</string>
    <string name="deleteStep">Delete Step</string>
    <string name="whatdish">"What's dish, today?"</string>
    <string name="isEmpty">Please fill fully!</string>
    <string name="namedish">"What's name of my dish?"</string>
    <string name="material">Material</string>
    <string name="example">Example: 120 gram Chicken \n Example: 50 gram Sugar</string>
    <string name="ration">Ration</string>
    <string name="login_success">Login Successful!</string>
    <string name="login_fail">Login unsuccessful!</string>
    <string name="login_cancel">Login cancelled by user!</string>
    <string name="login_load">Please wait....</string>
    <string name="planner">Meal Planner</string>
    <string name="search_hint">Search for recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">UserName</string>
    <string name="firebase_error_login">Firebase error</string>
    <string name="cancel_login">UserName</string>
    <string name="error_login">UserName</string>
    <string name="logout">Log out</string>
    <string name="email">email@gm.uit.edu.vn</string>
    <string name="facebook_app_id">138370893292795</string>
</resources>
