<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_recipe"
            android:title="@string/recipe" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/ic_shoppingcart"
            android:title="@string/shopping" />
        <item
            android:id="@+id/nav_planner"
            android:icon="@drawable/ic_planner"
            android:title="@string/planner" />
        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/ic_following"
            android:title="@string/follow" />
    </group>



</menu>
