<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nghia.coo.AddRecipeActivity"
    android:orientation="vertical"
    android:background="@color/common_google_signin_btn_text_light_disabled">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearlayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearlayout1">

                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                    <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@android:drawable/ic_menu_crop"
                    android:id="@+id/coverRecipe"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/edit_cover"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@android:drawable/ic_menu_edit"
                    app:border_color="#FF000000"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true" />



                </RelativeLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/namedish"
                    android:ems="10"
                    android:id="@+id/editTextName"
                    android:background="@drawable/rounded_edittext"
                    android:drawableLeft="@android:drawable/ic_menu_myplaces"
                    android:layout_marginTop="5dp"
                    android:textSize="24sp"
                    android:textStyle="normal|bold"
                    android:textColor="?android:attr/colorFocusedHighlight"
                    android:textColorHint="@color/com_facebook_button_background_color_disabled"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        app:srcCompat="@drawable/ic_alert_name"
                        android:id="@+id/imagealert"
                        android:layout_weight="0.00"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <EditText
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:inputType="number"
                        android:ems="10"
                        android:hint="@string/time"
                        android:id="@+id/editTextTime"
                        android:textColorHint="@color/com_facebook_button_background_color_disabled"
                        android:textColorLink="@color/colorAccent" />

                    <TextView
                        android:text="@string/dvtime"
                        android:layout_width="wrap_content"
                        android:id="@+id/textView3"
                        android:layout_height="match_parent"
                        android:gravity="center" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:srcCompat="@drawable/ic_ration_name"
                        android:id="@+id/imageView4"
                        android:layout_weight="0.00" />

                    <EditText
                        android:layout_width="69dp"
                        android:layout_height="40dp"
                        android:inputType="number"
                        android:ems="10"
                        android:hint="@string/ration"
                        android:id="@+id/editTextRation"
                        android:textColorHint="@color/com_facebook_button_background_color_disabled"
                        android:textColorLink="@color/colorAccent" />

                    <TextView
                        android:text="@string/dvration"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView4"
                        android:gravity="center" />


                </LinearLayout>
                <TextView
                    android:text="@string/material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textSize="25sp"
                    android:textStyle="normal|bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:ellipsize="start"
                    android:background="@drawable/material"
                    android:id="@+id/editTextMaterial"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" />

                <TextView
                    android:text="@string/addrecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textSize="25sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="@string/step1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/recipeText"
                    android:textCursorDrawable="@null"
                    android:background="@drawable/edit_text_bottom_border"
                    android:textColorLink="@color/com_facebook_button_send_background_color"
                    android:paddingLeft="8dp"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp"
                    android:paddingRight="8dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                >



                <Button
                    android:id="@+id/addrecpieButton"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:drawableLeft="@drawable/add"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:text="@string/addStep"
                    android:layout_width="150dp" />

                <Button
                    android:layout_width="150dp"
                    android:id="@+id/deleteStep"
                    android:layout_weight="0"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:drawableLeft="@drawable/bin"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/deleteStep" />
            </LinearLayout>



        </LinearLayout>


    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_action_name"
        android:id="@+id/up"

        android:layout_gravity="end|bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:backgroundTint="@color/com_facebook_button_send_background_color" />
</RelativeLayout>
