<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nghia.coo.SetScheduleActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/imageSchedule"
        android:layout_height="240dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"/>

    <TextView
        android:text="@string/textnameevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:paddingLeft="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:textSize="18sp"
        android:drawableLeft="@drawable/ic_name_tag"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameeventText"
        android:hint="@string/nameevent"
        android:textCursorDrawable="@null"
        android:background="@drawable/edit_text_bottom_border"
        android:textColorLink="@color/com_facebook_button_send_background_color"
        android:paddingLeft="8dp"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:paddingRight="8dp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:text="@string/setdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_schedule"
        android:gravity="center_vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonsettime"
            android:layout_weight="1"
            android:background="@drawable/button_custom_3"
            android:layout_marginRight="2dp" />

        <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonsetdate"
            android:layout_weight="1"
            android:background="@drawable/button_custom_3"
            android:layout_marginLeft="2dp" />
    </LinearLayout>

    <Button
        android:text="@string/addtoplanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonaddplanner"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold"
        android:background="@drawable/custom_button_2"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/coverfoot"
        android:layout_marginTop="5dp" />
</LinearLayout>
